link dao/safe minions meta to dao members

--- a/manifests/safeMinionFactory-ds.yaml
+++ b/manifests/safeMinionFactory-ds.yaml
@@ -12,6 +12,7 @@ mapping:
   entities:
     - Moloch
     - Minion
+    - SafeMinion
   abis:
     - name: SafeMinionFactory
       file: ./abis/SafeMinionFactory.json
